set virtual host like localhost

--- a/docker-compose-build.yml
+++ b/docker-compose-build.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: varnish/
     environment:
-      - VIRTUAL_HOST=magento2.docker
+      - VIRTUAL_HOST=localhost
       - VIRTUAL_PORT=80
       - HTTPS_METHOD=noredirect
     ports:
@@ -25,7 +25,7 @@ services:
     env_file:
       - ./global.env
     #environment:
-      #- VIRTUAL_HOST=magento2.docker
+      #- VIRTUAL_HOST=localhost
       #- VIRTUAL_PORT=80
       #- HTTPS_METHOD=noredirect
 
@@ -73,8 +73,8 @@ services:
       - M2SETUP_DB_NAME=magento2
       - M2SETUP_DB_USER=magento2
       - M2SETUP_DB_PASSWORD=magento2
-      - M2SETUP_BASE_URL=http://magento2.docker/
-      # - M2SETUP_SECURE_BASE_URL=https://magento2.docker/
+      - M2SETUP_BASE_URL=http://localhost/
+      # - M2SETUP_SECURE_BASE_URL=https://localhost/
       - M2SETUP_BACKEND_FRONTNAME=admin
       - M2SETUP_ADMIN_FIRSTNAME=Admin
       - M2SETUP_ADMIN_LASTNAME=User
