--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,7 +95,7 @@ services:
   appdata:
     image: tianon/true
     volumes:
-      - ./magento:/var/www/magento
+      - ./m2:/var/www/magento
 
   dbdata:
     image: tianon/true
